--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -1,5 +1,5 @@
-@function imgUrl($file, $path: "background") {
-    @return url("../images/" + $path + "/" + $file) no-repeat;
+@function imgUrl($file, $path: "background"){
+@return url("../images/" + $path + "/" + $file) no-repeat;
 }
 
 header {
@@ -8,7 +8,7 @@ header {
     .navigation_bar {
         width: 100%;
         position: fixed;
-        top:0;
+        top: 0;
         z-index: 1000;
         background-color: $primary;
 
@@ -23,7 +23,8 @@ header {
         margin-top: 112px;
         padding: 40px 0 70px;
 
-        .banner_left, .banner_right {
+        .banner_left,
+        .banner_right {
             padding: 60px;
             overflow: hidden;
         }
@@ -35,7 +36,7 @@ header {
                 .loan_type_option {
                     height: 100%;
                     width: 100%;
-                    background: rgba(200,169,249,0.2);
+                    background: rgba(200, 169, 249, 0.2);
                     padding: 24px 4px 20px;
                     border-radius: 20px;
                     text-align: center;
@@ -44,17 +45,18 @@ header {
                     display: flex;
                     flex-direction: column;
                     align-items: center;
+                    color: $primary;
                 }
 
                 #prevBtn {
                     cursor: pointer;
                 }
 
-                .form_slider {    
+                .form_slider {
                     .slick-track {
                         display: flex !important;
                     }
-            
+
                     .slick-slide {
                         height: inherit !important;
                     }
@@ -64,116 +66,115 @@ header {
                             .hero_heading {
                                 font-size: 3rem !important;
                             }
-            
+
                             .sub_heading {
                                 font-size: 1.125rem !important;
                             }
                         }
-            
-                        label {
-                            font-size: 1.125rem;
-                            font-weight: 600;
-                            margin-bottom: 12px;
-                        }
-            
-                        label.form-check-label {
-                            font-weight: 300;
-                            margin-bottom: 0;
-                        }
-            
+
                         input[type=text],
                         input[type=email],
-                        input[type=number] {
+                        input[type=tel] {
                             background: none;
                             border-radius: 0;
                             border: none;
-                            border-bottom: 1px solid $white;
-                            padding: 0;
-                            font-size: 1.125rem;
-                            color: $white;
-            
+                            padding: 20px 0 0;
+                            font-size: 2.25rem;
+                            font-family: $font-articulat-heavy;
+                            color: $secondary;
+                            line-height: 1;
+
                             &::placeholder {
-                                color: $white;
-                                opacity: 0.5;
+                                color: $grey;
                             }
-            
+
                             &:focus {
                                 outline: none;
                                 box-shadow: none;
                             }
                         }
-            
-                        .form-check {
-                            @include media-breakpoint-down(sm) {
-                                padding-left: 0;
-                                margin-bottom: 0;
-                            }
+
+                        input[type="radio"] {
+                            opacity: 0;
+                            position: fixed;
+                            width: 0;
                         }
-            
-                        .form-check-inline {
-                            @include media-breakpoint-up(md) {
-                                margin-right: 2.5rem;
-                            }
-                        }
-            
-            
-                        .form-check-input {
-                            display: none;
-                        }
-            
-                        .form-check-label {
+
+                        .radio-toolbar label {
+                            display: flex;
+                            flex-direction: column;
+                            align-items: center;
+                            justify-content: center;
                             cursor: pointer;
-                            display: inline-block;
-                            font-size: 1rem;
-                            line-height: 1.5;
-                            padding: 14px 14px 14px 32px;
-                            position: relative;
-            
-                            &:hover,
-                            &:focus {
-                                .radio-button-circle:before {
-                                    border-color: $white;
-                                }
-                            }
-            
-                            &:active .radio-button-circle:before {
-                                transform: scale(1.1);
-                            }
-            
-                            @include media-breakpoint-down(sm) {
-                                font-size: 0.875rem;
+                            color: $primary;
+                            letter-spacing: -0.01em;
+                            height: 100%;
+                            width: 100%;
+                            background: rgba(200, 169, 249, 0.2);
+                            padding: 24px 4px 20px;
+                            border-radius: 20px;
+                            text-align: center;
+                            font-weight: 700;
+                            transition: 0.2s all;
+
+                            &:hover {
+                                background-color: $secondary-light;
                             }
                         }
-            
-                        .radio-button-circle {
-                            border-radius: 50%;
-                            cursor: pointer;
-                            display: block;
-                            height: 8px;
-                            left: 4px;
-                            position: absolute;
-                            top: 20px;
-                            transition: background-color .1s ease-out;
-                            vertical-align: middle;
-                            width: 8px;
-            
-                            &:before {
-                                border: 1px solid $white;
-                                border-radius: 50%;
-                                content: '';
-                                display: inline-block;
-                                height: 20px;
-                                position: absolute;
-                                top: -6px;
-                                transition: border-color .1s ease-out,
-                                    transform .1s ease-out;
-                                left: -6px;
-                                width: 20px;
-                            }
+
+                        .radio-toolbar input[type="radio"]:checked+label {
+                            background-color: $primary;
+                            color: $white;
                         }
-            
+
                         .form-check-input:checked+.form-check-label .radio-button-circle {
                             background-color: $primary;
+                        }
+
+                        .range {
+                            width: 100%;
+                            height: 24px;
+                            position: relative;
+                            background-color: #F0F0F7;
+                            border-radius: 100px;
+
+                            .sliderThumb {
+                                position: absolute;
+                                width: 34px;
+                                height: 34px;
+                                background-color: $white;
+                                box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2);
+                                border-radius: 50%;
+                                top: -6px;
+                                cursor: pointer;
+                                z-index: 2;
+                            }
+
+                            .progressBar {
+                                position: absolute;
+                                height: 100%;
+                                background-color: $secondary;
+                                border-radius: 100px;
+                                z-index: 1;
+                            }
+
+                            input[type=range] {
+                                position: absolute;
+                                width: 99.5%;
+                                height: 24px;
+                                -webkit-appearance: none;
+                                opacity: 0;
+                                z-index: 3;
+
+                                &::-webkit-slider-thumb {
+                                    height: 34px;
+                                    width: 34px;
+                                    background-color: $secondary;
+                                    border-radius: 30px;
+                                    cursor: pointer;
+                                    -webkit-appearance: none;
+                                }
+                            }
                         }
                     }
                 }
@@ -182,7 +183,54 @@ header {
 
         .banner_right {
             background: imgUrl('banner_right.jpg') center top;
-        }        
+            background-size: cover;
+            display: flex;
+            align-items: end;
+        }
+
+        .cta_slider {
+            margin-top: 60px;
+
+            .slick-track {
+                display: flex;
+                gap: 16px;
+            }
+
+            .slick-slide {
+                height: inherit;
+                background: $tertiary;
+                border-radius: 20px;
+                min-height: 134px;
+                color: $white;
+                padding: 8px 33px;
+                font-size: 1.25rem;
+                line-height: 1;
+                font-weight: 600;
+                text-transform: capitalize;
+            }
+        }
+    }
+}
+
+section.loan_types {
+    padding: 120px 0;
+    background: $light;
+
+    .loan_type_option {
+        height: 100%;
+        width: 100%;
+        background: rgba(200, 169, 249, 0.2);
+        padding: 24px 4px 20px;
+        border-radius: 20px;
+        text-align: center;
+        font-weight: 700;
+        letter-spacing: -0.01em;
+        display: flex;
+        flex-direction: column;
+        align-items: space-between;
+        min-height: 262px;
+        color: $primary;
+        font-size: 1.5rem;
     }
 }
 
