--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -8,7 +8,7 @@ $black: #000000;
 $white: #ffffff;
 $light: #F8F8FC;
 $dark: #0F0E1E;
-$grey: #d9d9d9;
+$grey: #D7D7DC;
 
 $theme-colors: (
     ) !default;
@@ -29,8 +29,12 @@ $theme-colors: map-merge(("primary": $primary,
 );
 
 $font-sizes: (
+    96: 96px,
     70: 70px,
+    64: 64px,
+    48: 48px,
     32: 32px,
+    20: 20px,
     16: 16px
 );
 
