--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -234,6 +234,48 @@ section.loan_types {
     }
 }
 
+section.our_commitment {
+    padding: 188px 0 208px;
+    background-color: $primary;
+}
+
+section.about_us {
+    padding: 178px 0;
+    background-color: $tertiary;
+}
+
+section.loan_security {
+    background-color: $primary;
+    padding: 133px 0 193px;
+
+    .animated_text {
+        color: $secondary-light;
+        font-size: 2.25rem;
+        line-height: 0.6;
+        text-align: center;
+        font-family: $font-brusheo;
+        animation: bounce 5s infinite;
+
+        @keyframes bounce {
+            0%,
+            20%,
+            50%,
+            80%,
+            100% {
+                transform: translateY(-30px)rotate(-15deg);
+            }
+
+            40% {
+                transform: translateY(-60px)rotate(-15deg);
+            }
+
+            60% {
+                transform: translateY(-45px)rotate(-15deg);
+            }
+        }
+    }
+}
+
 footer {
     font-size: 0.875rem;
     background-color: #221f1f;
