--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -34,6 +34,7 @@ $theme-colors: map-merge(("primary": $primary,
 
 $font-sizes: (
     96: 96px,
+    72: 72px,
     70: 70px,
     64: 64px,
     48: 48px,
