--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -2,6 +2,10 @@ img {
     max-width: 100%;
 }
 
+html {
+    overflow-x: hidden;
+}
+
 body {
     font-family: $font-body;
     overflow-x: hidden;
@@ -15,7 +19,7 @@ body {
 }
 
 .btn {
-    height: 47px;
+    height: 54px;
     display: flex;
     justify-content: center;
     align-items: center;
