--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -24,7 +24,7 @@ header {
         }
 
         hr {
-            @include media-breakpoint-up(md) {
+            @include media-breakpoint-up(lg) {
                 display: none;
             }
 
@@ -38,6 +38,10 @@ header {
         margin-top: 112px;
         padding: 40px 0 70px;
 
+        @include media-breakpoint-only(md) {
+            margin-top: 183px;
+        }
+
         @include media-breakpoint-down(sm) {
             background: $secondary;
             padding: 40px 0;
@@ -49,6 +53,10 @@ header {
             border-radius: 20px;
             padding: 60px;
             overflow: hidden;
+
+            @include media-breakpoint-down(lg) {
+                padding: 60px 24px;
+            }
 
             @include media-breakpoint-down(sm) {
                 padding: 60px 0 30px;
@@ -274,7 +282,7 @@ header {
             padding: 60px;
             position: relative;
 
-            @include media-breakpoint-down(sm) {
+            @include media-breakpoint-down(lg) {
                 padding: 150px 20px 40px;
             }
 
@@ -283,7 +291,7 @@ header {
                 top: 38%;
                 left: -10rem;
 
-                @include media-breakpoint-down(sm) {
+                @include media-breakpoint-down(lg) {
                     top: -1rem;
                     left: 37%;
                     transform: rotate(90deg);
@@ -317,10 +325,6 @@ header {
                 bottom: -30px;
                 list-style-type: none;
                 justify-content: center;
-
-                @include media-breakpoint-up(md) {
-                    justify-content: start;
-                }
 
                 li {
                     margin: 0 4.5px;
@@ -449,7 +453,7 @@ section.loan_security {
             }
         }
 
-        @include media-breakpoint-down(sm) {
+        @include media-breakpoint-down(lg) {
             display: none;
         }
     }
@@ -675,12 +679,20 @@ section.testimonials {
             position: relative;
             padding: 120px 80px;
 
+            @include media-breakpoint-down(lg) {
+                padding: 0 64px 80px;
+            }
+
             @include media-breakpoint-down(sm) {
                 padding: 0 24px 73px;
             }
 
             .hero_heading {
                 padding: 116px 0;
+
+                @include media-breakpoint-down(lg) {
+                    padding: 64px 0;
+                }
 
                 @include media-breakpoint-down(sm) {
                     padding: 20px 0;
@@ -712,7 +724,7 @@ section.testimonials {
                     }
                 }
 
-                @include media-breakpoint-down(sm) {
+                @include media-breakpoint-down(lg) {
                     display: none;
                 }
             }
@@ -721,7 +733,7 @@ section.testimonials {
         .section_right {
             overflow: hidden;
 
-            @include media-breakpoint-up(md) {
+            @include media-breakpoint-up(lg) {
                 position: absolute;
                 top: 0;
                 left: 100%;
@@ -734,7 +746,7 @@ section.testimonials {
 
                 .slick-list,
                 .slick-track {
-                    @include media-breakpoint-up(md) {
+                    @include media-breakpoint-up(lg) {
                         height: 100%;
                     }
                 }
@@ -752,8 +764,12 @@ section.testimonials {
                     flex-direction: column;
                     margin: 0 16px;
 
-                    @include media-breakpoint-down(sm) {
+                    @include media-breakpoint-down(lg) {
                         padding: 37px 24px;
+                        margin: 0 8px;
+                    }
+
+                    @include media-breakpoint-down(sm) {
                         margin: 0 4px;
                     }
                 }
@@ -763,10 +779,6 @@ section.testimonials {
                     bottom: -30px;
                     list-style-type: none;
                     justify-content: center;
-
-                    @include media-breakpoint-up(md) {
-                        justify-content: start;
-                    }
 
                     li {
                         margin: 0 4.5px;
@@ -816,6 +828,10 @@ section.footer_contact {
         border-radius: 20px;
         overflow: hidden;
         color: $white;
+
+        @include media-breakpoint-only(md) {
+            padding: 40px 24px;
+        }
     }
 }
 
@@ -824,7 +840,7 @@ footer {
     background-color: $dark;
     color: $light-grey;
 
-    @include media-breakpoint-down(sm) {
+    @include media-breakpoint-down(lg) {
         padding: 40px 0;
     }
 
